made changes for navbar visibility and testimonial jittery issue

--- a/Pages/Testimonials/test-style.css
+++ b/Pages/Testimonials/test-style.css
@@ -62,6 +62,13 @@
   background-color: #3c4aea;
 }
 
+/* Override Swiper styles */
+.slide-container .swiper-slide {
+  transform: none;
+  backface-visibility: visible;
+}
+
+
 @media screen and (max-width: 768px) {
   .slide-content{
     margin: 0 10px;
@@ -70,10 +77,9 @@
     display: none;
   }
 }
-.card:hover{
-  transform: rotateY(180deg);
-  
-}
+
+
+
 .card{
   position: relative;
   transition: all 1s linear;
@@ -83,8 +89,12 @@
   
   background-color:  #e9ebff;
   height:300px;
+  transform-origin: center;
 }
-
+.card:hover{
+  transform: rotateY(180deg);
+  
+}
 .fronts {
   backface-visibility: hidden;
 }
